# e-commerce-AI-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_factory.py  aliexpress_agent.py  amazon_agent.py  ecommerce_agent.py  flipkart_agent.py
static/: index.html
