[project]
name = "mcpdemo"
version = "0.1.0"
description = "MCP Demo with E-commerce Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "beautifulsoup4>=4.9.3",
    "selenium>=4.1.0",
    "playwright>=1.20.0",
    "pydantic>=1.8.2",
    "aiohttp>=3.8.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
